# hooking_toolkit

./: CMakeLists.txt  README.md
private/: CMakeLists.txt  decrypt_data.sh.in  enc_data  encrypt_data.sh.in  key.bin.enc  test.cubin
src/deduplicator/: CMakeLists.txt  deduplicator.cpp  deduplicator.h  exposed_functions.cpp
src/examples/: CMakeLists.txt  example_defs.def.in
src/inst_lib/: CMakeLists.txt  inst.cpp  inst.h
src/python_wrapper/: CMakeLists.txt  Dump_Modules.py  Dump_Symbols.py  Find_Symbol_Prefix.py  Instriment_Binary.py  PyInstriment.py  example_definition.def.in
src/scripts/: CMakeLists.txt  dump_mods.sh.in  dump_symbols.sh.in  find_symbol_prefix.sh.in
src/stacktrace/: CMakeLists.txt  SimpleHooks.cpp  StraceThirdPartyLauncher.cpp  StraceThirdPartyLauncher.h  hook_func_third_party.cpp  hookable_functions.cpp  launcher.cpp  strace.cpp  strace.h  strace_third_party.cpp  strace_third_party.h
src/tests/: CMakeLists.txt  basic_replacelib.cpp  basic_test.cpp  common_defs.h
