install(FILES ${PROJECT_SOURCE_DIR}/src/python_wrapper/PyInstriment.py 
		${PROJECT_SOURCE_DIR}/src/python_wrapper/Instriment_Binary.py
		${PROJECT_SOURCE_DIR}/src/python_wrapper/Dump_Modules.py
		${PROJECT_SOURCE_DIR}/src/python_wrapper/Dump_Symbols.py
		${PROJECT_SOURCE_DIR}/src/python_wrapper/Find_Symbol_Prefix.py
		DESTINATION bin)
